--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head>
         <title> Bài kiểm tra HTML - môn học thiết kế web </title>
         <style>
-            table, th, td {
+             input table, th, td {
               border: 1px solid black;
               width: 15px;
-              padding: 10px;
+              padding: 15px;
             }
             table.center {
               margin-left: auto;
@@ -127,7 +127,22 @@
                             <option value="11">11</option>
                             <option value="12">12</option>
                         </select>
-                        <input type="text" id="lname" name="lname" placeholder=" Năm "><br>
+                        <select id="Năm" name="Năm">
+                            <option value="Năm" selected>Năm</option>
+                            <option value="2000">2000</option>
+                            <option value="2001">2001</option>
+                            <option value="2002">2002</option>
+                            <option value="2003">2003</option>
+                            <option value="2004">2004</option>
+                            <option value="2005">2005</option>
+                            <option value="2006">2006</option>
+                            <option value="2007">2007</option>
+                            <option value="2008">2008</option>
+                            <option value="2009">2009</option>
+                            <option value="2010">2010</option>
+                            <option value="2011">2011</option>
+                        </select>
+                        
                     </td>
                 </tr>
                 <tr>
