--- a/index.html
+++ b/index.html
@@ -2,7 +2,17 @@
 <html>
     <head>
         <title> Bài kiểm tra HTML - môn học thiết kế web </title>
-        <link rel="stylesheet" href="stay.css">
+        <style>
+            input table, th, td {
+     border: 1px solid black;
+     width: 15px;
+     padding: 15px;
+     }
+     table.center {
+        margin-left: auto;
+        margin-right: auto;
+     }
+        </style>
 
     </head>
     <body>
