--- a/index.html
+++ b/index.html
@@ -2,17 +2,7 @@
 <html>
     <head>
         <title> Bài kiểm tra HTML - môn học thiết kế web </title>
-        <style>
-            input table, th, td {
-     border: 1px solid black;
-     width: 15px;
-     padding: 15px;
-     }
-     table.center {
-        margin-left: auto;
-        margin-right: auto;
-     }
-        </style>
+        <link rel="stylesheet" href="stay.css">
 
     </head>
     <body>
