--- a/index.html
+++ b/index.html
@@ -1,166 +1,18 @@
-<!doctype ...>
-<html>
-    <head>
-        <title> Bài kiểm tra HTML - môn học thiết kế web </title>
-        <link rel="stylesheet" href="stay.css">
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Adding CSS</title>
+  </head>
 
-    </head>
-    <body>
-        <form action="">
-        <table>
-            <tr>
-                <th colspan="2"> <span style="font-weight: bold;"> ĐĂNG KÝ </span> </th>
-            </tr>
-            <tr>
-                <td>
-                    <label for="fname">Họ tên</label><br>
-               
-                </td>
-                <td>
-                    <input type="text" id="fname" name="fname" placeholder=" Họ tên "><br>
-                </td>
-            </tr>  
-            <tr>
-                <td>
-                    <label for="lname"> Usename</label><br>
-                </td>
-                <td>
-                    <input type="text" id="lname" name="lname" placeholder=" Tên đăng nhập "><br>
-                </td>
-            </tr>
-                <tr>
-                    <td> 
-                        <label for="lname1"> Mật khẩu </label><br> 
-                    </td>
-                    <td>
-                        <input type="text" id="lname1" name="lname1" placeholder=" Mật khẩu "><br>
-                    </td>
-                </tr>
-                <tr>
-                    <td> 
-                        <label for="lname11"> Nhập lại mật khẩu </label><br> 
-                    </td>
-                    <td>
-                        <input type="text" id="lname11" name="lname11" placeholder=" Nhập lại mật khẩu "><br>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Giới tính 
-                    </td>
-                    <td>
-                          <input type="radio" id="html" name="fav_language" value="HTML">
-                          <label for="html"> Nam </label><br>
-                          <input type="radio" id="css" name="fav_language" value="CSS">
-                          <label for="css"> Nữ </label><br>
-                          <input type="radio" id="javascript" name="fav_language" value="JavaScript">
-                          <label for="javascript"> Khác </label><br>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Địa chỉ
-                    </td>
-                    <td>
-                        <textarea name="message" style="width:200px; height:100px;"></textarea><br>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Ngày sinh
-                    </td>
-                    <td>
-                        <select id="day" name="day">
-                            <option value="Ngày" selected>Ngày</option>
-                          <option value="1">1</option>
-                          <option value="2">2</option>
-                          <option value="3">3</option>
-                          <option value="4">4</option>
-                          <option value="5">4</option>
-                          <option value="6">6</option>
-                          <option value="7">7</option>
-                          <option value="8">8</option>
-                          <option value="9">9</option>
-                          <option value="10">10</option>
-                          <option value="11">11</option>
-                          <option value="12">12</option>
-                          <option value="13">13</option>
-                          <option value="14">14</option>
-                          <option value="15">15</option>
-                          <option value="16">16</option>
-                          <option value="17">17</option>
-                          <option value="18">18</option>
-                          <option value="19">19</option>
-                          <option value="20">20</option>
-                          <option value="21">21</option>
-                          <option value="22">22</option>
-                          <option value="23">23</option>
-                          <option value="24">24</option>
-                          <option value="25">25</option>
-                          <option value="26">26</option>
-                          <option value="27">27</option>
-                          <option value="28">29</option>
-                          <option value="30">30</option>
-                          <option value="31">31</option>
-                        </select>
-                        <select id="Tháng" name="Tháng">
-                            <option value="Tháng" selected>Tháng</option>
-                            <option value="1">1</option>
-                            <option value="2">2</option>
-                            <option value="3">3</option>
-                            <option value="4">4</option>
-                            <option value="5">4</option>
-                            <option value="6">6</option>
-                            <option value="7">7</option>
-                            <option value="8">8</option>
-                            <option value="9">9</option>
-                            <option value="10">10</option>
-                            <option value="11">11</option>
-                            <option value="12">12</option>
-                        </select>
-                        <select id="Năm" name="Năm">
-                            <option value="Năm" selected>Năm</option>
-                            <option value="2000">2000</option>
-                            <option value="2001">2001</option>
-                            <option value="2002">2002</option>
-                            <option value="2003">2003</option>
-                            <option value="2004">2004</option>
-                            <option value="2005">2005</option>
-                            <option value="2006">2006</option>
-                            <option value="2007">2007</option>
-                            <option value="2008">2008</option>
-                            <option value="2009">2009</option>
-                            <option value="2010">2010</option>
-                            <option value="2011">2011</option>
-                        </select>
-                        
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Avata
-                    </td>
-                    <td>
-                        <input type="file" id="myfile" name="myfile"><br>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Sở thích
-                    </td>
-                    <td>
-                        <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
-                        <label for="vehicle1"> Xem phim </label><br>
-                        <input type="checkbox" id="vehicle2" name="vehicle2" value="Car">
-                        <label for="vehicle2"> Thể thao </label><br>
-                        <input type="checkbox" id="vehicle3" name="vehicle3" value="Boat">
-                        <label for="vehicle3"> Trò chơi </label><br>
-                    </td>
-                </tr>
-                <tr>
-                    <th colspan="2"> <input type="reset" value="Reset"> <input type="submit" value="Ok"> </th>
-                </tr>
-            </table>
-        </form>
-    </body>
+  <body>
+    <h1>3 Phương pháp thêm CSS</h1>
+    <!-- 
+    1) Tạo 3 đường dẫn tới 3 Webpages: inline, internal and external 
+    2) Làm theo hướng dẫn trong các file để style cho webpage
+  -->
+  <a href="./external.html">external</a>
+  <a href="./inline.html">inline</a>
+  <a href="./internal.html">internal</a>
+</body>
 </html>
